# Resume-builder

./: .gitignore  README.md  nixpacks.toml  package.json
backend/: main.py  pyproject.toml  requirements.txt  setup.py
frontend/: .gitignore  README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  config.js
frontend/src/components/: Education.jsx  Experience.jsx  Finalize.jsx  Heading.jsx  Home.jsx  Projects.jsx  Sidebar.jsx  Skills.jsx  Summary.jsx
frontend/src/services/: api.js
